# ployer

./: .dockerignore  .env.example  .gitignore  Caddyfile  Cargo.toml  DOCUMENTATION.md  Dockerfile  PROGRESS.md  README.md  docker-compose.yml  install.sh
.cargo/: config.toml
.github/workflows/: release.yml
.sqlx/: query-1065e8295e39391f69c57fd1e6cf38e11f5748c55afb2696ce93e63be246e562.json  query-15472abfefed087eed5df758853668953727067a3dd9440c158e94cf2e4269e5.json  query-1c90bd982bee4440d71f10558d4fd0885f28de7d891e8e7f98fec14aff34d4f1.json  query-1cfc491da1af60d0ca6e3d31f558f0168228fd6afc33b7f4a4e111c6511ef188.json  query-1f93c5a94b715cadaa885584e5bb727079fc929c498f870098309aa2a7961f14.json  query-22427ce5a7c8aa52c846b31033e44f2a40e36c067465e253def2781a5b4c4dbf.json  query-2ac97779717cba4dc2400596c3837b31ba9465acba116c6d0403257a603a0fd7.json  query-310699ae23dc5584014bf4f48df0a5e2989565048ad052ea2fef48ba93340254.json  query-3175a023dd83cc5f49067d01ae2e219f6435aeb2475e12d112f185ce60c69ab9.json  query-36069cdf2d5e292325497f66cf96ba1624760a4857ccfc645f812a9eca7806ce.json  query-3afde88b39a0747065230add597e473592b7c74c1939eea98cb25835b919d516.json  query-4ed33249006be842368c560378c4d28935d5963373859a5047016054af6a3812.json  query-5062711475077c65bb24cea3511598e359e8d9f2edcce329350c0b96cf1ddd56.json  query-53046d11fed090e990afacf58a7bf776f6b46eb1fefcde1de5a3b60f57691c12.json  query-58ef335e09ec10a1834d049edc871738b79a4f276f6c51c3fec53e1ba1d05a70.json  query-5eba55a32f56d8f26dce55adfdf7bd6b385702fa0c89da991b53a64e84642117.json  query-6121c8e10a776e0cbace44fdcdd4db835dc086a4dfaa3ce9deba40fab57b547e.json  query-6788d2a39fb9e21c4f9ec4c22ae8e0386bc0f12615c6901a650ba37382e29f92.json  query-700db81a0b9688b7536b693488390fa5a7b881c6775bbf3173560b53095deecf.json  query-750163d4ba9d5ec2563263bac24f717f57b6db8a627cc5e4a440b7c402d641b7.json  query-75fe7d6685ce629218e7cded1aac8a5be80e05e491691eb74a9f884378fbbd06.json  query-7b8c1d6f91023578c72125e7a7f3fbb07816911731bc8091a6f4c1c245b2252c.json  query-8882bcaad24a951c2047d4d11e78191d9b0368f8b4c2026574dc40b403d08fab.json  query-93bb4361bed5a0083443b4de8c37d5dc0485264712a601d72f551736a6d172e4.json  query-9ab482c8383a4a6a6a5b371220fd034cb025db0e37b3bcf896e0b91d261f9691.json  query-af2a57f0af0da97b8d3d8059c23ebf8481b4a1ead68a1ae638ac3a024d52759b.json  query-afc1c549c1a7b63e6c92a97f5c1e1e851881e16dfe964ebc7ae8512acba7705d.json  query-b039c7da89e84eab65aef1adeffcd30536f67cc7e0422a0d0225c41ebeeb0cf1.json  query-b3825dd8cb469591b0cc1e92100fd0ce88c17ec4f0fba59361ba66440db20f1c.json  query-b3bc1a76be3bdf8a50590043313db1e9f2af4692003d6f3c5c9c3d6384de7c76.json  query-c27016965cac659891ab3b4b0611949b02afbbfdfdd30e9236a775a5be65218b.json  query-c89b77cb90b23e6ec4aef49c277e26d803ae821d4cdf04835bdea4810525d309.json  query-cfa502c8ef0dc4c280ae39c08babec821ee1de05b9fe977a3f8513d8e6030520.json  query-d1ee97f0e47e730851ed20fa88216d9bb25e7f255c672ccd5e52b24775411b3d.json  query-ec6a373116e4b64dce2307ddf225f474a6c13df0ee5a06cc7c0fa420db05b01c.json  query-f57a70c58429848fe72dcaf667d908615ab8bcc3af3360768df862272285ee67.json  query-f62a4bace991bfde8df980627cb207a1546a94540bfa8555669f890e5cd21462.json  query-f7e9a8a2bb5004d71ccbcfca775c55b4d507b55e2a536a6e1444a73e6b03b21f.json  query-fdae17ef53b79972298cfe43ebef1af7f4120cd1ac6af5ff173776dac883c178.json
config/: default.toml
crates/ployer-api/: Cargo.toml
crates/ployer-api/src/: app_state.rs  main.rs
crates/ployer-api/src/auth/: helpers.rs  jwt.rs  middleware.rs  mod.rs  password.rs  service.rs
crates/ployer-api/src/middleware/: mod.rs  rate_limit.rs  validation.rs
crates/ployer-api/src/routes/: applications.rs  auth.rs  containers.rs  deployments.rs  domains.rs  health.rs  mod.rs  monitoring.rs  servers.rs  settings.rs  webhooks.rs
crates/ployer-api/src/services/: app_health_monitor.rs  deployment.rs  health_monitor.rs  mod.rs  stats_aggregator.rs  webhook.rs
crates/ployer-api/src/websocket/: mod.rs
crates/ployer-core/: Cargo.toml
crates/ployer-core/src/: config.rs  crypto.rs  error.rs  lib.rs
crates/ployer-core/src/models/: application.rs  container_stats.rs  deployment.rs  domain.rs  health_check.rs  mod.rs  server.rs  user.rs  webhook.rs
crates/ployer-db/: Cargo.toml
crates/ployer-db/src/: lib.rs
crates/ployer-db/src/repositories/: api_key.rs  application.rs  container_stats.rs  deploy_key.rs  deployment.rs  domain.rs  env_var.rs  health_check.rs  mod.rs  server.rs  settings.rs  user.rs  webhook.rs
crates/ployer-docker/: Cargo.toml
crates/ployer-docker/src/: lib.rs
crates/ployer-git/: Cargo.toml
crates/ployer-git/src/: lib.rs
crates/ployer-proxy/: Cargo.toml
crates/ployer-proxy/src/: lib.rs
crates/ployer-server/: Cargo.toml
crates/ployer-server/src/: lib.rs
frontend/: package.json
frontend/src/: app.css
frontend/src/lib/: index.ts  types.ts
frontend/src/lib/api/: client.ts
frontend/src/lib/components/: ConfirmModal.svelte  LogViewer.svelte  StatsViewer.svelte  Toast.svelte
frontend/src/lib/stores/: auth.ts  toast.ts  websocket.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/applications/: +page.svelte
frontend/src/routes/applications/[id]/: +page.svelte
frontend/src/routes/apps/: +page.svelte
frontend/src/routes/containers/: +page.svelte
frontend/src/routes/login/: +layout.svelte  +page.svelte
frontend/src/routes/servers/: +page.svelte
frontend/src/routes/settings/: +page.svelte
migrations/: 001_initial.sql  002_webhooks.sql  003_health_check_results.sql  004_settings.sql
