[package]
name = "ployer-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
