[package]
name = "ployer-docker"
version.workspace = true
edition.workspace = true

[dependencies]
ployer-core = { workspace = true }
bollard = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
