[package]
name = "ployer-git"
version.workspace = true
edition.workspace = true

[dependencies]
ployer-core = { workspace = true }
git2 = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rsa = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
